--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     "dirname": "exceluuid",
     "commands": "./dist/commands",
     "plugins": [
-      "@oclif/plugin-help",
-      "@oclif/plugin-plugins"
+      "@oclif/plugin-help"
     ],
     "topicSeparator": " ",
     "topics": {
