--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@oclif/core": "^1",
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^2.0.1",
-    "exceljs": "^4.3.0"
+    "exceljs": "^4.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@oclif/test": "^2",
